<resources>
    <string name="app_name">uHouse</string>
    <string name="light">Освещение</string>
    <string name="disinfection">Дезинфекция</string>
    <string name="temperature">Измерение \nтемпературы</string>
    <string name="airing">Проветрить</string>
    <string name="heating">Обогрев</string>
    <string name="humidity">Измерение \nвлажности</string>
    <string name="graphic">Графики</string>
    <string name="scenario">Сценарии</string>
    <string name="help">Помощь</string>
    <string name="notification">Notification</string>
    <string name="settings">Settings</string>
    <string name="btn_turn_on">Включить</string>
    <string name="btn_turn_off">Выключить</string>
    <string name="btn_measuring">Измерить</string>
    <string name="hint_temperature">0 C</string>
    <string name="btn_open">Открыть</string>
    <string name="btn_close">Закрыть</string>
    <string name="btn_switch_on">Вкл.</string>
    <string name="btn_switch_off">Выкл.</string>
    <string name="add_device">Добавить устройство</string>
</resources>
