<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.user.uhouse.MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="20dp"

        >

        <LinearLayout
            android:id="@+id/row1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/light_button"
                android:layout_width="160dp"
                android:layout_height="120dp"
                android:layout_marginLeft="5dp"
                android:background="@drawable/border"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/lamp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/light"
                    android:textColor="#000000" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/disinfection_button"
                android:layout_width="160dp"
                android:layout_height="120dp"
                android:layout_marginLeft="10dp"
                android:background="@drawable/border"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/disinfection" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/disinfection"
                    android:textColor="#000000"
                    android:layout_gravity="center_horizontal"/>
            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:id="@+id/row2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/temperature_taking__button"
                android:layout_width="160dp"
                android:layout_height="120dp"
                android:layout_marginLeft="10dp"
                android:background="@drawable/border"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/thermometer" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/temperature"
                    android:textColor="#000000" />
            </LinearLayout>


            <LinearLayout
                android:id="@+id/graphic_button"
                android:layout_width="160dp"
                android:layout_height="120dp"
                android:layout_marginLeft="10dp"
                android:background="@drawable/border"
                android:orientation="vertical"
                >

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/graphic" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/graphic"
                    android:textColor="#000000" />
            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:id="@+id/row3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/scenario_button"
                android:layout_width="160dp"
                android:layout_height="120dp"
                android:layout_marginLeft="10dp"
                android:background="@drawable/border"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/scenario" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/scenario"
                    android:textColor="#000000" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/help__button"
                android:layout_width="160dp"
                android:layout_height="120dp"
                android:layout_marginLeft="10dp"
                android:background="@drawable/border"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/baseline_help_black_36dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/help"
                    android:textColor="#000000" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
